# bank-account-kata

./: index.html  style.css  tsconfig.json
holochain/: Cargo.toml  README.md  package-lock.json  package.json  specs.md
holochain/ui/src/: App.svelte
holochain/ui/src/bank/bank_account/: AccountDetail.svelte  AllAccounts.svelte  AllTransfert.svelte  CreateAccount.svelte  CreateTransfer.svelte  EditAccount.svelte  EditTransfer.svelte  MyTranfers.svelte  TransferDetail.svelte  TransfersForAccount.svelte  types.ts
holochain/workdir/: happ.yaml  web-happ.yaml
js/: BankAccount.class.ts
php/: BankAccount.php  index.php  tests.php
python/: index.py  tests.py
rust-bank-kata/: Cargo.toml
rust-bank-kata/src/: lib.rs
rust/tests/: lib.rs
svelte/: index.html  package-lock.json  package.json
svelte/src/: App.svelte
svelte/src/lib/: BankAccount.svelte
svelte/src/store/: accounts.store.ts
ts/: index.html
ts/js/: BankAccount.class.ts
ts/script/: BankAccount.class.ts
